base/k8up/networkpolicies/egress-k8up-jobs.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: egress-k8up-jobs
spec:
  namespaceSelector: k8up == 'backup-enabled'
  selector: >-
    job-name contains 'backup' ||
    job-name contains 'prune' ||
    job-name contains 'check'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        nets:
          - ${HOST_IP}/32
        ports:
          - 6443
